initialize board and test it

--- a/build.gradle
+++ b/build.gradle
@@ -41,3 +41,10 @@ bootRepackage {
     mainClass = 'connect4.conf.ConnectFourConfiguration'
     excludeDevtools = true
 }
+
+test {
+    testLogging {
+        events "passed", "failed"
+        exceptionFormat "full"
+    }
+}
