--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
     // Testing
     testCompile("junit:junit:4.12")
+    testCompile("org.mockito:mockito-core:1.+")
 }
 
 bootRepackage {
